# flask_test_task

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose-test.yaml  docker-compose.yaml  makefile  pyproject.toml
app/: main.py
app/core/: security.py  settings.py
app/db/: db_session.py  models.py
app/db/alembic/: env.py
app/db/alembic/versions/: e2939ee23cce_init.py
app/routes/: article_routes.py  auth_routes.py  user_routes.py
app/schemas/: article.py  enums.py  token.py  user.py
app/services/: article.py  auth.py  permissions.py  user.py
app/utils/: jwt_decorator.py
scripts/: init_db.py  populate.sql
tests/: conftest.py  test_article_routes.py  test_auth.py  test_permissions.py
