[project]
name = "flask-test-task"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.1",
    "pydantic[email]>=2.10.2",
    "psycopg2>=2.9.10",
    "flask>=3.1.0",
    "flask-bcrypt>=1.0.1",
    "jwt>=1.3.1",
    "pyjwt>=2.10.1",
    "jose>=1.0.0",
    "python-jose>=3.3.0",
]
