[tool.poetry]
name = "flask-test-task"
version = "0.1.0"
description = ""
authors = ["Eldar Kerimov <goreldar@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
pydantic = {extras = ["email"], version = "^2.10.3"}
pydantic-settings = "^2.6.1"
pyjwt = "^2.10.1"
sqlalchemy = "^2.0.36"
psycopg2 = "^2.9.10"
alembic = "^1.14.0"
jose = "^1.0.0"
python-jose = "^3.3.0"
uvicorn = "^0.32.1"


[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [".", "app"]
